@@ -1,3 +1,7 @@
+2007-05-13  Thomas Wood  <thos@gnome.org>
+
+	* appearance-style.c: (prepare_combo): Sort the items in the theme lists
+
 2007-05-13  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-themes.c: (theme_thumbnail_func): unref the thumbnail when
